Added more features

--- a/style.css
+++ b/style.css
@@ -295,3 +295,87 @@ body,html {
 ._buildon-note p {
   margin-bottom:0
 }
+
+._buildon-step-snappic {
+  padding:10px;
+  border:1px solid #dbdbdb;
+  background-color:white;
+  border-radius:3px;
+  margin-top:5px
+}
+
+._buildon-step-snappic span {
+  font-size:12pt
+}
+
+._buildon-take-pic {
+  position: absolute;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.2);
+  z-index:1;
+  top:0;
+  left:0;
+  display:flex;
+  padding: 0 20px
+}
+
+._buildon-pic-panel {
+  width:100%;
+  background-color: white;
+  border-radius:3px;
+  align-self:center;
+  text-align:center;
+}
+
+._buildon-pic-panel video {
+  margin-bottom: 10px;
+  transform: scale(-1,1)
+}
+
+._buildon-pic-panel canvas {
+  border-radius: 3px;
+  transform: scale(-1,1);
+  width: 90%
+} 
+
+._buildon-pic-panel-action {
+  text-align: right;
+  padding: 15px 20px;
+  background:linear-gradient(to right,#1f2f98,#1ca7ec);
+  border-radius: 3px 3px 0 0;
+}
+
+._buildon-pic-panel-action span {
+  color: white
+}
+
+.outlined {
+  background-color: white !important;
+  border: 1px solid #4995d7 !important;
+  color: #4995d7 !important
+}
+
+.uploaded-image img{
+  width: 50%;
+  border-radius: 3px;
+}
+
+.uploaded-image img[id=canver] {
+  transform: scale(-1,1);
+}
+
+.review-panel h1{
+  display: inline-block;
+  font-size: 10pt;
+  margin: 0;
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+.review-panel {
+  background-color: rgb(247, 247, 247);
+  padding: 10px;
+  border-radius: 3px;
+  border:1px solid rgb(238, 238, 238)
+}
