--- a/style.css
+++ b/style.css
@@ -277,6 +277,17 @@ body,html {
 ._buildon-user-panel-content ul li {
   padding: 10px;
   font-size: 10pt;
+  display:flex;
+}
+
+._buildon-user-panel-content ul li span:first-child {
+  width: 100%;
+  color: rgb(59, 137, 255)
+}
+
+._buildon-user-panel-content ul li span:last-child {
+  color: #bd7878;
+  width: 10%
 }
 
 ._buildon-user-panel-content ul li:nth-child(2n) {
@@ -466,6 +477,10 @@ body,html {
   color: gray;
 }
 
+.request-add-button[disabled] {
+  background:linear-gradient(to right,#b7d9ea,#80849d)
+}
+
 .request-add-button {
   margin-top: 10px;
   width: 100%;
@@ -474,4 +489,59 @@ body,html {
   padding: 10px;
   background: linear-gradient(to right,#1ca7ec,#1f2f98);
   color: white
+}
+
+.request-on {
+  animation-name: reqOn;
+  animation-fill-mode: forwards;
+  animation-duration: 300ms;
+  animation-timing-function: cubic-bezier(.32,.01,.41,1.28);
+}
+
+.current-request-dialog {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.25);
+  display:grid;
+  grid-template-columns: 1fr;
+  align-items:center;
+  justify-items: center;
+  top:0;
+  z-index: 1
+}
+
+.current-request-panel {
+  width: 80%;
+  background-color: white;
+  border-radius: 3px;
+  padding: 10px
+}
+
+.current-request-panel label {
+  display:block;
+  margin-bottom: 10px;
+  font-size: 10pt
+}
+
+.current-request-panel img {
+  width: 100%;
+  border-radius: 5px;
+  height: 400px;
+  overflow-y: scroll;
+  margin-bottom: 10px
+}
+
+
+@keyframes reqOn {
+  from {
+      /* transform: translateY(-40px); */
+      transform: scale(0);
+      opacity: 0
+  }
+  to {
+      /* transform: translateY(0); */
+      transform: scale(1);
+      opacity: 1;
+  }
 }
