--- a/src/Components/Dialog/index.css
+++ b/src/Components/Dialog/index.css
@@ -127,6 +127,20 @@
     font-weight: bold;
 }
 
+.request-location-details summary{
+    background: linear-gradient(to bottom, rgb(228, 228, 228), rgb(175, 175, 175));
+    border-radius: 3px;
+    padding: 10px
+
+}
+
+.request-location-details p {
+    padding: 10px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 3px;
+    border: 1px solid rgb(219, 219, 219)
+}
+
 @keyframes scaleUp {
     from {
         transform: translateY(-40px);
